<resources>
    <string name="app_name">Red Apron</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="tab">\t</string>

    <string name="error_invalid_product_name">This product name is invalid</string>
    <string name="error_invalid_product_type">This product type is invalid</string>
    <string name="error_invalid_product_sellby">This product sell by is invalid</string>
    <string name="error_invalid_product_bestbefore">This product best before is invalid</string>
    <string name="error_invalid_product_quantity">This product quantity is invalid</string>

    <string name="prompt_product_name">Item Name</string>
    <string name="prompt_product_type">Type</string>
    <string name="prompt_product_sellby">SellBy</string>
    <string name="prompt_product_bestbefore">Best Before</string>
    <string name="prompt_product_quantity">Quantity</string>
    <string name="prompt_button_add">Add Item</string>
</resources>
